test/message/syntactic-tail-call-in-try.out
*%(basename)s:13: SyntaxError: Tail call expression in try block.
    return continue f();
           ^
SyntaxError: Tail call expression in try block.
